# solace-gemma4good

./: .env.resolved  .gitignore  .gitmodules  EXPLORATION_SUMMARY.md  HANDOFF.md  README.md  RELEASE_CHECKLIST.md  THIRD_PARTY_NOTICES.md  gemma4good_writeup.md  gradle.properties  keystore.properties.template  lint.xml  settings.gradle.kts
.claude/: settings.json
.github/workflows/: pages.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/turnip/: README.txt
app/src/main/assets/turnip/icd.d/: freedreno_icd.aarch64.json
app/src/main/kotlin/com/masterllm/app/: AppThemeViewModel.kt  BundledModelManager.kt  MainActivity.kt  MasterLLMApplication.kt
app/src/main/kotlin/com/masterllm/app/navigation/: AgentScreen.kt  GgufEngineViewModel.kt  KittenTtsEngine.kt  MasterLLMNavHost.kt  OllamaServeScreen.kt  VoiceScreen.kt
app/src/main/kotlin/com/masterllm/app/openclaw/: AgentViewModel.kt  OpenClawEngine.kt  ToolRegistry.kt
app/src/main/kotlin/com/masterllm/app/solace/: Gemma4ChatTemplate.kt  ModelDownloadManager.kt  ModelDownloadScreen.kt  SpeechRecognitionManager.kt  SystemPromptLoader.kt  ThinkingTokenParser.kt  TtsTextFilter.kt  VoskModelDownloadManager.kt  VoskSpeechManager.kt
app/src/main/res/drawable/: ic_app_logo.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_solace_logo.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/raw/: system_prompt.txt
app/src/main/res/values/: colors_solace.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
assets/app_screenshots/: README.md
core-data/: build.gradle.kts
core-data/src/main/kotlin/com/masterllm/core/data/: BundledModelManager.kt  KittenTtsEngine.kt  TtsTextFilter.kt  VoskModelDownloadManager.kt  VoskSpeechManager.kt
core-data/src/main/kotlin/com/masterllm/core/data/db/: AppDatabase.kt  Daos.kt  ModelEntity.kt
core-data/src/main/kotlin/com/masterllm/core/data/di/: DataModule.kt
core-data/src/main/kotlin/com/masterllm/core/data/mapper/: EntityMappers.kt
core-data/src/main/kotlin/com/masterllm/core/data/repository/: CharacterVisualCacheRepositoryImpl.kt  ConversationRepositoryImpl.kt  ModelRepositoryImpl.kt  (+2 more)
core-domain/: build.gradle.kts
core-network/: build.gradle.kts
core-network/src/main/kotlin/com/masterllm/core/network/: HfAuth.kt  HuggingFaceApi.kt
core-network/src/test/kotlin/com/masterllm/core/network/: HfAuthTest.kt
core-ollama/: build.gradle.kts
core-ollama/src/main/: AndroidManifest.xml
core-ui/: build.gradle.kts
docs/: README.md  api-reference.md  architecture.md  build-guide.md  modules.md  native-layer.md  solace-features.md  troubleshooting.md  user-flows.md
docs/api/: core-api.md  feature-api.md
docs/architecture/: README.md  modules.md  runtime.md
docs/autoresearch/: state.yaml
docs/autoresearch/specs/: 2026-05-04-master-llm-diagnosis.md
docs/development/: build.md  environment.md  testing.md
docs/site/: blog.html  index.html
feature-auth/: build.gradle.kts
feature-auth/src/main/kotlin/com/masterllm/feature/auth/: AuthScreen.kt  AuthViewModel.kt
feature-auth/src/test/kotlin/com/masterllm/feature/auth/: AuthViewModelTest.kt
feature-chat/: build.gradle.kts
feature-chat/src/main/kotlin/com/masterllm/feature/chat/: ChatScreen.kt  ChatViewModel.kt  TaskTemplatesScreen.kt
feature-image-gen/: build.gradle.kts
feature-marketplace/: build.gradle.kts
feature-marketplace/src/main/kotlin/com/masterllm/feature/marketplace/: MarketplaceScreen.kt  MarketplaceViewModel.kt
feature-marketplace/src/test/kotlin/com/masterllm/feature/marketplace/: MarketplaceViewModelTest.kt
feature-model-manager/: build.gradle.kts
feature-performance/: build.gradle.kts
feature-performance/src/main/kotlin/com/masterllm/feature/performance/: PerformanceMonitorScreen.kt  PerformanceMonitorViewModel.kt
feature-roleplay/: build.gradle.kts
feature-roleplay/src/main/kotlin/com/masterllm/feature/roleplay/: RoleplayScreen.kt  RoleplayViewModel.kt
feature-settings/: build.gradle.kts
feature-settings/src/main/kotlin/com/masterllm/feature/settings/: OllamaModelExplorerScreen.kt  OllamaModelExplorerViewModel.kt  OllamaSettingsSection.kt  SettingsScreen.kt  SettingsViewModel.kt
gradle/: libs.versions.toml
release-notes/: v1.0.1.md  v1.0.12.md  v1.0.2.md  v1.0.5.md  v1.0.6.md  v1.0.7.md  v1.0.9.md
reports/: scaffold_audit_2026-04-12.md  scaffold_audit_2026-04-13.md
runtime-gguf/: build.gradle.kts
runtime-gguf/src/androidTest/kotlin/com/masterllm/runtime/gguf/: OnDeviceQwen3InferenceTest.kt
runtime-gguf/src/main/cpp/: CMakeLists.txt  GGUFReader.cpp  LLMInference.cpp  LLMInference.h  gguf_bridge.cpp  gguf_bridge_full.cpp  gguf_bridge_stub.cpp
runtime-gguf/src/main/kotlin/com/masterllm/runtime/gguf/: GGUFReader.kt  GgufEngine.kt  GgufHeaderParser.kt  GgufRuntimeCoordinator.kt  InferencePerformanceTracker.kt  LlmInferenceManager.kt  OpenClawEngine.kt  PerformanceUsageSampler.kt  ToolRegistry.kt
runtime-gguf/src/test/kotlin/com/masterllm/runtime/gguf/: GgufEngineRuntimeTest.kt  GgufHeaderParserTest.kt
runtime-imagegen/: build.gradle.kts
runtime-imagegen/src/androidTest/kotlin/com/masterllm/runtime/imagegen/: ImageGenEngineDeviceTest.kt
runtime-imagegen/src/main/cpp/: CMakeLists.txt  ImageDiffusion.cpp  ImageDiffusion.h  image_bridge.cpp
runtime-imagegen/src/main/kotlin/com/masterllm/runtime/imagegen/: ImageGenEngine.kt  ImageModelInspector.kt
runtime-imagegen/src/test/kotlin/com/masterllm/runtime/imagegen/: ImageModelInspectorTest.kt
runtime-safetensors/: build.gradle.kts
runtime-safetensors/src/androidTest/kotlin/com/masterllm/runtime/safetensors/: OnDeviceSafetensorsLoadTest.kt
runtime-safetensors/src/main/kotlin/com/masterllm/runtime/safetensors/: SafetensorsEngine.kt
runtime-safetensors/src/test/kotlin/com/masterllm/runtime/safetensors/: SafetensorsEngineTest.kt
testing/testing-fixtures/: build.gradle.kts
testing/testing-robot/: build.gradle.kts
testing/testing-shared/: build.gradle.kts
(+23 files in other folders)
